Style header and some elements

--- a/src/boardcontrol1/boardcontrol1.html
+++ b/src/boardcontrol1/boardcontrol1.html
@@ -1,82 +1,1 @@
-<div class="board-control-1">
-    <confirmit:wysiwygcomponent id="9b80e2b9-35ab-4229-8a51-a1bf46f14c70" type="ReportalFilter">
-    </confirmit:wysiwygcomponent>
-    <div>
-        <br/>
-    </div>
-    <confirmit:wysiwygcomponent id="4fd20aa9-a72d-4a4f-876a-77689f5f2841" type="AggregatedTable">
-    </confirmit:wysiwygcomponent>
-    <confirmit:wysiwygcomponent id="d992e60b-3b29-4f5e-8bc3-c0dd4bafc5e4" type="AggregatedTable">
-    </confirmit:wysiwygcomponent>
-    <br>
-        <confirmit:wysiwygcomponent id="63df36b0-d583-4105-8210-b30c8d57775e" type="AggregatedTable">
-        </confirmit:wysiwygcomponent>
-        <div>
-            <confirmit:wysiwygcomponent id="beb988b6-b06d-4f3e-be28-6ae2ee541ba6" type="AggregatedTable">
-            </confirmit:wysiwygcomponent>
-            <confirmit:wysiwygcomponent id="860216d5-d0df-4051-b60f-ccf370c6baa6" type="AggregatedTable">
-            </confirmit:wysiwygcomponent>
-            <confirmit:wysiwygcomponent id="7f6252af-0f00-43ff-9f18-f6176a21ed34" type="AggregatedTable">
-            </confirmit:wysiwygcomponent>
-            <confirmit:wysiwygcomponent id="337c77b5-1d54-4b2b-84b8-38fc10d19df8" type="AggregatedTable">
-            </confirmit:wysiwygcomponent>
-        </div>
-        <div>
-            <font size="3">
-                <b>
-                    Percentage
-                </b>
-            </font>
-        </div>
-        <div>
-            <font size="3">
-                <b>
-                    <br/>
-                </b>
-            </font>
-        </div>
-        <div>
-            <confirmit:wysiwygcomponent id="95fe8ea6-faba-43c1-9e6c-eebcf89746b2" type="LanguageText">
-            </confirmit:wysiwygcomponent>
-        </div>
-        <div>
-            <br/>
-        </div>
-        <div>
-            <br/>
-        </div>
-        <confirmit:wysiwygcomponent id="8e7f3dec-89bc-460f-942e-a16200536170" type="LanguageText">
-        </confirmit:wysiwygcomponent>
-        <div>
-            <br/>
-        </div>
-        <div>
-            <br/>
-        </div>
-        <div>
-            <div>
-                <div>
-                    <confirmit:wysiwygcomponent id="4f75fdb3-c0f0-491b-84a5-d3ef1f1b8e68" type="LanguageText">
-                    </confirmit:wysiwygcomponent>
-                </div>
-            </div>
-            <div>
-                <br/>
-            </div>
-            <div>
-                <font size="3">
-                    <b>
-                        Proposed Activity
-                    </b>
-                </font>
-            </div>
-            <div>
-                <br/>
-            </div>
-            <div>
-                <confirmit:wysiwygcomponent id="775e2e96-1db1-417a-a144-50378ed1c7ee" type="LanguageText">
-                </confirmit:wysiwygcomponent>
-            </div>
-        </div>
-    </br>
-</div>
+<div class="board-control-1"><confirmit:wysiwygcomponent type="ReportalFilter" id="9b80e2b9-35ab-4229-8a51-a1bf46f14c70" /><div><br></div><confirmit:wysiwygcomponent type="AggregatedTable" id="4fd20aa9-a72d-4a4f-876a-77689f5f2841" /><confirmit:wysiwygcomponent type="AggregatedTable" id="d992e60b-3b29-4f5e-8bc3-c0dd4bafc5e4" /><br><confirmit:wysiwygcomponent type="AggregatedTable" id="63df36b0-d583-4105-8210-b30c8d57775e" /><div><confirmit:wysiwygcomponent type="AggregatedTable" id="beb988b6-b06d-4f3e-be28-6ae2ee541ba6" /><confirmit:wysiwygcomponent type="AggregatedTable" id="860216d5-d0df-4051-b60f-ccf370c6baa6" /><confirmit:wysiwygcomponent type="AggregatedTable" id="7f6252af-0f00-43ff-9f18-f6176a21ed34" /><confirmit:wysiwygcomponent type="AggregatedTable" id="337c77b5-1d54-4b2b-84b8-38fc10d19df8" /></div><div class="board-data__title">Percentage</div><div><font size="3"><b><br></b></font></div><div><confirmit:wysiwygcomponent type="LanguageText" id="95fe8ea6-faba-43c1-9e6c-eebcf89746b2" /></div><div><br></div><div><br></div><confirmit:wysiwygcomponent type="LanguageText" id="8e7f3dec-89bc-460f-942e-a16200536170" /><div><br></div><div><br></div><div><div><div><confirmit:wysiwygcomponent type="LanguageText" id="4f75fdb3-c0f0-491b-84a5-d3ef1f1b8e68" /></div></div><div><br></div><div class="board-data__title">Proposed Activity</div><div><br></div><div><confirmit:wysiwygcomponent type="LanguageText" id="775e2e96-1db1-417a-a144-50378ed1c7ee" /></div></div>
