--- a/src/tax_performance_maturity/tax_performance_maturity.html
+++ b/src/tax_performance_maturity/tax_performance_maturity.html
@@ -1,3 +1,3 @@
-<confirmit:wysiwygcomponent type="AggregatedTable" id="5573b628-6cf7-4b9d-8aec-a66544485d85" /><br><table style="width:100%;">
+<div class="tax_performance_maturity"><confirmit:wysiwygcomponent type="AggregatedTable" id="5573b628-6cf7-4b9d-8aec-a66544485d85" /><br><table style="width:100%;">
 <tbody><tr>
-<td><confirmit:wysiwygcomponent type="ChartDataDef" id="e697d0c5-d437-4f6b-8da1-ccb26176f35f" /></td><td><h5 class="table-chart__title">Results: <span class="table-chart__title--stress">A Common Purpose</span></h5><confirmit:wysiwygcomponent type="AggregatedTable" id="b36ad72d-e69a-408b-b150-937cfb4a40bb" /></td></tr></tbody></table><div><br></div>
+<td><confirmit:wysiwygcomponent type="ChartDataDef" id="e697d0c5-d437-4f6b-8da1-ccb26176f35f" /></td><td><h5 class="table-chart__title">Results: <span class="table-chart__title--stress">A Common Purpose</span></h5><confirmit:wysiwygcomponent type="AggregatedTable" id="b36ad72d-e69a-408b-b150-937cfb4a40bb" /></td></tr></tbody></table><div><br></div></div>
